--- a/pom.xml
+++ b/pom.xml
@@ -10,4 +10,27 @@
         <maven.compiler.release>24</maven.compiler.release>
         <exec.mainClass>com.mycompany.fatality.Fatality</exec.mainClass>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>javax.json</groupId>
+            <artifactId>javax.json-api</artifactId>
+            <version>1.1.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>javax.json</artifactId>
+            <version>1.1.4</version>
+            <type>bundle</type>
+        </dependency>
+        
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.13.1</version>
+            <type>jar</type>
+        </dependency>
+        
+    </dependencies>
+
 </project>
